tests/rosetta/out/Java/boolean-values.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:31:35Z
// boolean-values.mochi
import java.util.*;

public class BooleanValues {
    static boolean parseBool(String s) {
        Object l = lower(s);
        if (Objects.equals(l, "1") || Objects.equals(l, "t") || Objects.equals(l, true) || Objects.equals(l, "yes") || Objects.equals(l, "y")) {
            return true;
        }
        return false;
    }
    static void main() {
        boolean n = true;
        System.out.println(n);
        System.out.println("bool");
        n = !n;
        System.out.println(n);
        int x = 5;
        int y = 8;
        System.out.println("x == y:" + " " + x == y);
        System.out.println("x < y:" + " " + x < y);
        System.out.println("\nConvert String into Boolean Data type\n");
        String str1 = "japan";
        System.out.println("Before :" + " " + "string");
        boolean bolStr = parseBool(str1);
        System.out.println("After :" + " " + "bool");
    }
    public static void main(String[] args) {
    main();
    }
}
